# cavestory-nx

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  com.gitlab.coringao.cavestory-nx.json
data/: cavestory-nx.6  disclaimer.txt
data/StageMeta/: LICENSE-JSON.txt
data/lang/: Readme-lang.md  translation.txt
data/lang/chinese/: font_1.fnt  font_2.fnt  font_3.fnt  font_4.fnt  font_5.fnt  metadata  system.json
data/lang/french/: ArmsItem.tsc  Credit.tsc  Head.tsc  font_1.fnt  font_5.fnt  metadata  system.json
data/lang/german/: ArmsItem.tsc  Caret.pbm  Credit.tsc  Head.tsc  Loading.pbm  StageSelect.tsc  TextBox.pbm  font_2.fnt  font_3.fnt  font_4.fnt  system.json
data/lang/italian/: ArmsItem.tsc  Credit.tsc  Head.tsc  font_1.fnt  font_2.fnt  (+2 more)
data/pxt/: fx01.pxt  fx02.pxt  fx03.pxt  fx04.pxt  fx05.pxt  fx06.pxt  fx07.pxt  fx0b.pxt  fx0c.pxt  fx0e.pxt  fx0f.pxt  fx10.pxt  fx11.pxt  fx12.pxt  fx14.pxt  fx15.pxt  fx16.pxt  fx17.pxt  fx18.pxt  fx19.pxt  fx1a.pxt  fx1b.pxt  fx1c.pxt  fx1d.pxt  fx1e.pxt  fx1f.pxt  fx20.pxt  fx21.pxt  fx22.pxt  fx23.pxt  fx25.pxt  fx26.pxt  fx27.pxt  fx29.pxt  fx2a.pxt  fx2b.pxt  fx2c.pxt  fx2d.pxt  fx2e.pxt  fx2f.pxt  (+45 more)
src/: LICENSE.GPLv3  ObjManager.cpp  ObjManager.h  ResourceManager.cpp  debug.cpp  game.cpp  input.cpp  main.cpp  niku.cpp  object.cpp  object.h  p_arms.cpp  player.cpp  profile.cpp  screeneffect.cpp  screeneffect.h  settings.cpp  stageboss.cpp  trig.cpp  tsc.cpp  version.h
src/TextBox/: SaveSelect.cpp
src/cmake/: FindSDL2_mixer.cmake
src/common/: InitList.cpp  glob.cpp  json.hpp
src/endgame/: credits.cpp
src/graphics/: font.cpp
src/intro/: title.cpp
src/siflib/: sif.cpp
src/sound/: ogg11.cpp  org.h  remastered.cpp  remastered.h  sound.cpp
(+214 files in other folders)
